# CBORIO

./: .gitignore  1.txt  CMakeLists.txt  LICENSE  README.md  my_class.h  test.cpp
.github/workflows/: CI.yml  cmake.yml  cmake_nix.yml  cmake_win.yml  coverage.yml
CRUDE_REFL/: crude_reflect.h  simple_reflect.h
CR_REFL/: simple_macro.h  simple_reflect.h
IO_CBOR/: CMakeLists.txt
IO_CBOR/inc/: decoder.h  encoder.h  simple_reflect.h  templates.h
IO_CBOR/src/: decoder.cpp  encoder.cpp
inc/: cbor_file.h  reclog.h  reclog_impl.h  thread_pool.h  utilities.h
src/: cbor_file.cpp  reclog.cpp
test/: CMakeLists.txt  bag_test.cpp  cbor_test.cpp  cpr_test.cpp  my_class.h  test.cpp  test_tools.h  utilities.h
