cmake_minimum_required(VERSION 3.11)
project(BAGREC LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_compile_options(-Wall -Wextra -pedantic)
message(STATUS "---------------------------")
message(STATUS "Current Project: ${PROJECT_NAME}")
option(ENABLE_UNIT_TESTS "Enable unit tests" ON)
option(ENABLE_LCOV "Enable code coverage tests" OFF)
message(STATUS "Enable gtesting: ${ENABLE_UNIT_TESTS}")
message(STATUS "Enable coverage: ${ENABLE_LCOV}")
add_subdirectory(vendor/IO_CBOR)
add_subdirectory(vendor/CR_REFL)

aux_source_directory(src SRCLISTS)
add_library(${CMAKE_PROJECT_NAME} ${SRCLISTS})
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC inc)
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC CBOR REFL)

if(ENABLE_UNIT_TESTS)
    enable_testing()
    add_subdirectory(test)
endif()
message(STATUS "---------------------------")