cmake_minimum_required(VERSION 3.11)
project(cborio LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
if(${ENABLE_LCOV})
    message(STATUS "---------------------------")
    message(STATUS "Enable Lcov in ${PROJECT_NAME}")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
endif()
aux_source_directory(src SRCLISTS)
add_library(${PROJECT_NAME} ${SRCLISTS})
add_compile_options(-Wall -Wextra -pedantic)
target_include_directories(${PROJECT_NAME} PUBLIC inc)