set(SUBPRJ "cbor_test")
message(STATUS "---------------------------")
message(STATUS "Current : ${SUBPRJ}")
if(ENABLE_UNIT_TESTS)
message(STATUS "Enable Gtest in ${SUBPRJ}")
    message(STATUS "-- Gtest Configure")
    find_package(GTest CONFIG REQUIRED)
    if(NOT GTest_FOUND)
        message(FATAL_ERROR "Failed to find required depedency: gtest.")
    endif()
    include(GoogleTest)
    add_executable(${SUBPRJ} cbor_test.cpp)
    target_link_libraries(${SUBPRJ} PUBLIC CBOR REFL GTest::gtest)
    gtest_discover_tests(${SUBPRJ})
    add_executable(bag_test bag_test.cpp)
    target_link_libraries(bag_test BAGREC GTest::gtest)
    gtest_discover_tests(bag_test)
    if(ENABLE_LCOV)
        message(STATUS "Enable Lcov in ${SUBPRJ}")
        message(STATUS "-- lcov Configure")
        find_program(LCOV_BIN lcov)
        if(NOT LCOV_BIN MATCHES "lcov$")
            message(FATAL_ERROR "lcov required, but not found!")
        endif()
        if(CMAKE_BUILD_TYPE MATCHES Debug)
            include(CodeCoverage.cmake)
            APPEND_COVERAGE_COMPILER_FLAGS()
            setup_target_for_coverage_lcov(
            NAME coverage 
            EXECUTABLE ctest test 
            EXCLUDE "/usr/*" 
            DEPENDENCIES ${SUBPRJ} bag_test)
        endif()
    endif()
endif()